<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nev"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/kepkeszitesgomb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kepkeszitese" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <EditText
            android:id="@+id/felhasznalonev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/felhasznalonev"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/csaladnev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/csaladnev"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/keresztnev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/keresztnev"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/hozzaadasgomb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hozzaadas" />

        <Button
            android:id="@+id/visszaolvasasgomb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lementett" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>